--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,5 +7,42 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F5F5F5;
+  background-color: #FFFFFF;
+  color: #000000;
+}
+
+.MuiDrawer-paper {
+  background-color: #FFFFFF !important;
+  color: #000000 !important;
+}
+
+.MuiAppBar-root {
+  background-color: #FFFFFF !important;
+  color: #000000 !important;
+}
+
+.MuiButton-contained {
+  background-color: #000000 !important;
+  color: #FFFFFF !important;
+}
+
+.MuiButton-outlined {
+  border-color: #000000 !important;
+  color: #000000 !important;
+}
+
+.MuiTextField-root {
+  background-color: #F5F5F5 !important;
+}
+
+.MuiSelect-select {
+  background-color: #F5F5F5 !important;
+}
+
+.MuiListItem-root {
+  border-bottom: 1px solid #E0E0E0;
+}
+
+.MuiListItem-root:last-child {
+  border-bottom: none;
 }
